# nemotron-vllm-ocr

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  run_vllm_ocr.py
benchmarks/: benchmark_ocr.py
docs/: design.md
examples/: make_sample_image.py
model-config/: config.json
notebooks/: nemotron_ocr_vllm_demo.ipynb
results/: benchmark-l4-batch4.json  benchmark-l4-single.json
results/a100-2026-07-08/: DETAILED_REPORT.md  README.md  accuracy-equivalence.json  bo767-1k-page-manifest.csv  detector-batch-sweep.csv  hf-official-inprocess-b64-d32-30k.json  native-r1-1k.json  native-r2-1k.json  native-r4-1k.json  native-r8-1k.json  native-r8-dynamic-10k-gpu-trace.csv  native-r8-dynamic-10k.json  native-settings-sweep.csv  offline-r1-1k.json  offline-r16-1k.json  optimized-vllm-r8-rec128-control-30k-gpu-trace.csv  optimized-vllm-r8-rec128-control-30k.json  optimized-vllm-r8-rec64-30k-gpu-trace.csv  optimized-vllm-r8-rec64-30k.json  report_data.json  run-metadata.json  vllm-baseline-isolated-30k-gpu-trace.csv  vllm-baseline-isolated-30k.json
results/a100-2026-07-09-final-85-imgs/: README.md  SHA256SUMS
results/a100-2026-07-09-model-pr8-ab/: README.md  baseline-r1-gpu-trace.csv  baseline-r1.json  baseline-r2-gpu-trace.csv  baseline-r2.json  baseline-r3-gpu-trace.csv  baseline-r3.json  patched-r1-gpu-trace.csv  patched-r1.json  patched-r2-gpu-trace.csv  patched-r2.json  patched-r3-gpu-trace.csv  patched-r3.json  plot_model_pr8_ab.py  summary.json
src/nemotron_ocr_vllm/: __init__.py  codec.py  io_processor.py  model.py  (+1 more)
tests/: test_codec.py
(+45 files in other folders)
